tests/NormalTests/paczka1/fuzzy1/97065861.err
Error in line 3: omei5M S698 96,7
Error in line 8: OlT626aEXYt A35 22,2
Error in line 9: A35 A22 45,3
Error in line 15: dF8ocZbHsTU S698 440,8
Error in line 24: UPM13zR A22 64,7
Error in line 25: UPM13zR S698 33,5
Error in line 17: KrdBDvZq1X S698 16,3
Error in line 23: dF8ocZbHsTU A35 80,1
